// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedSettings rendering doesn't show if temporary mute is no longer active 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "You do not have any settings configured.",
    },
  ],
}
`;

exports[`CombinedSettings rendering works for both auto unfurl settings and muted prompts 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "get-settings-for-repo",
          "options": Array [
            Object {
              "text": "integrations/snappydoo",
              "value": "12345|integrations/snappydoo",
            },
            Object {
              "text": "integrations/html-to-mrkwdn",
              "value": "54321|integrations/html-to-mrkwdn",
            },
          ],
          "text": "Select a repository",
          "type": "select",
        },
      ],
      "callback_id": "unfurl-settings-auto",
      "color": "#24292f",
      "text": "Links you post linking to 2 private repositories automatically get a rich preview. Select a repository to adjust its settings.",
      "title": "Automatic rich previews",
    },
    Object {
      "actions": Array [
        Object {
          "name": "unmute-prompts",
          "text": "Unmute",
          "type": "button",
        },
      ],
      "callback_id": "unfurl-settings",
      "color": "#24292f",
      "text": "Prompts to show a rich preview are muted indefinitely",
      "title": "Muted prompts to show rich preview",
    },
  ],
}
`;

exports[`CombinedSettings rendering works for only auto unfurl settings 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "get-settings-for-repo",
          "options": Array [
            Object {
              "text": "integrations/snappydoo",
              "value": "12345|integrations/snappydoo",
            },
            Object {
              "text": "integrations/html-to-mrkwdn",
              "value": "54321|integrations/html-to-mrkwdn",
            },
          ],
          "text": "Select a repository",
          "type": "select",
        },
      ],
      "callback_id": "unfurl-settings-auto",
      "color": "#24292f",
      "text": "Links you post linking to 2 private repositories automatically get a rich preview. Select a repository to adjust its settings.",
      "title": "Automatic rich previews",
    },
  ],
}
`;

exports[`CombinedSettings rendering works for temporarily muted prompts 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "unmute-prompts",
          "text": "Unmute",
          "type": "button",
        },
      ],
      "callback_id": "unfurl-settings",
      "color": "#24292f",
      "text": "Prompts to show a rich preview are muted for 2 hours",
      "title": "Muted prompts to show rich preview",
    },
  ],
}
`;

exports[`CombinedSettings rendering works only for muted prompts 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "unmute-prompts",
          "text": "Unmute",
          "type": "button",
        },
      ],
      "callback_id": "unfurl-settings",
      "color": "#24292f",
      "text": "Prompts to show a rich preview are muted indefinitely",
      "title": "Muted prompts to show rich preview",
    },
  ],
}
`;
